--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,20 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+html {
+    background: #F7F7B9;
+}
+
+  @keyframes infinite-scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-50%); }
+  }
+  .animate-infinite-scroll {
+    animation: infinite-scroll 15s linear infinite;
+  }
+  .group:hover .animate-infinite-scroll {
+    animation-play-state: paused;
+  }
+
+
